--- a/static/src/css/navbar.css
+++ b/static/src/css/navbar.css
@@ -40,6 +40,10 @@
 	color: #efeb53 !important;
 }
 
+.t-navbar {
+	margin-bottom: 50px;
+}
+
 
 
 
